src/graph/snapshots/hopr_api__graph__function__tests__returning_last_edge_not_connected.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{\n    direction, path_length, path_index, observations, initial_value,\n    result_value,\n}"
---
direction: returning
path_length: 2
path_index: 1
observations:
  immediate: ~
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 1
result_value: -1
