src/graph/snapshots/hopr_api__graph__function__tests__symmetrical_forward_without_self_loopback_works_with_forward_value_fn.snap
---
source: src/graph/function.rs
expression: "PathCost\n{ after_first_edge: cost_after_first, after_last_edge: cost_after_last, }"
---
after_first_edge: 0.855
after_last_edge: 0.4275
