src/graph/snapshots/hopr_api__graph__function__tests__symmetrical_return_path_rejected_by_forward_value_fn.snap
---
source: src/graph/function.rs
expression: "PathCost\n{ after_first_edge: cost_after_first, after_last_edge: cost_after_last, }"
---
after_first_edge: -1
after_last_edge: -0.95
